@@ -376,7 +376,8 @@ slurm_sprint_job_info ( job_info_t * job_ptr, int one_liner )
 	snprintf(tmp_line, sizeof(tmp_line), 
 		"Dependency=%u Account=%s Reason=%s Network=%s",
 		job_ptr->dependency, job_ptr->account,
-		job_reason_string(job_ptr->wait_reason), job_ptr->network);
+		job_reason_string(job_ptr->state_reason), 
+		job_ptr->network);
 	xstrcat(out, tmp_line);
 	if (one_liner)
 		xstrcat(out, " ");
